[package]
name = "kd-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
median = "0.3.2"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ordered-float = "4.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

